Textarea overflow final fix

--- a/styles/botchat/fer.scss
+++ b/styles/botchat/fer.scss
@@ -187,6 +187,12 @@ div#hu-container-widget {
           padding-bottom: 13px !important;
           #hu-composer-aux-box {
             opacity: 0;
+            left: 0 !important;
+            padding-right: 71px !important; /* button width 50px + padding 19px + 2px (forces new line) */
+            padding-left: 21px !important; /* padding 19px + 2px (forces new line) */
+            line-height: 21px !important;
+            min-height: 21px !important;
+            max-height: 42px !important;
           }
         }
       }
